# data_prep_checkshots

./: Bairak_35_well_example.xlsx  Working_example.xlsx  main.py  pyproject.toml  stratigraphy_Bairak35.xlsx  test.xlsx
