[tool.poetry]
name = "brand-new-shit"
version = "0.1.0"
description = ""
authors = ["Alex <a33211noskov@gmail.com>"]
readme = "README.md"
packages = [{include = "brand_new_shit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
